submit btn functionality changed

--- a/ehda-list/index.html
+++ b/ehda-list/index.html
@@ -54,7 +54,7 @@
                         <form class="form-inline" action="">
                             <div class="form-group">
                                 <label for="search">شماره دعوت‌نامه:</label>
-                                <input class="form-control" type="search" id="search" name="search">
+                                <input class="form-control" type="number" id="search" name="search" autocomplete="off">
                                 <span class="b-input-icon">
                                     <i class="fa fa-search" aria-hidden="true"></i>
                                 </span>
@@ -81,155 +81,10 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <!--<tr class="text-danger" data-id="1" data-code="101">
-                                <td scope="row"></td>
-                                <td>نگار</td>
-                                <td>۱۰۱</td>
-                                <td>خانواده</td>
-                                <td class="td-name">
-                                    <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input&#45;&#45;name">
-                                </td>
-                                <td class="td-lottery-code">
-                                    <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input&#45;&#45;code">
-                                </td>
-                                <td>
-                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
-                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
-                                </td>
-                            </tr>
-                            <tr class="text-warning" data-id="2" data-code="102">
-                                <td scope="row"></td>
-                                <td>جعفر</td>
-                                <td>۱۰۲</td>
-                                <td>خانواده</td>
-                                <td class="td-name">
-                                    <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input&#45;&#45;name">
-                                </td>
-                                <td class="td-lottery-code">
-                                    <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input&#45;&#45;code">
-                                </td>
-                                <td>
-                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
-                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
-                                </td>
-                            </tr>
-                            <tr class="text-info" data-id="3" data-code="103">
-                                <td scope="row"></td>
-                                <td>محمد</td>
-                                <td>۱۰۳</td>
-                                <td>خانواده</td>
-                                <td class="td-name">
-                                    <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input&#45;&#45;name">
-                                </td>
-                                <td class="td-lottery-code">
-                                    <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input&#45;&#45;code">
-                                </td>
-                                <td>
-                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
-                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
-                                </td>
-                            </tr>
-                            <tr class="text-success" data-id="4" data-code="104">
-                                <td scope="row"></td>
-                                <td>آیدا</td>
-                                <td>۱۰۴</td>
-                                <td>خانواده</td>
-                                <td class="td-name">
-                                    <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input&#45;&#45;name">
-                                </td>
-                                <td class="td-lottery-code">
-                                    <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input&#45;&#45;code">
-                                </td>
-                                <td>
-                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
-                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
-                                </td>
-                            </tr>
-                            <tr data-id="5" data-code="105">
-                                <td scope="row"></td>
-                                <td>رضوان</td>
-                                <td>۱۰۵</td>
-                                <td>خانواده</td>
-                                <td class="td-name">
-                                    <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input&#45;&#45;name">
-                                </td>
-                                <td class="td-lottery-code">
-                                    <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input&#45;&#45;code">
-                                </td>
-                                <td>
-                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
-                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
-                                </td>
-                            </tr>
-                            <tr data-id="6" data-code="106">
-                                <td scope="row"></td>
-                                <td>حسام</td>
-                                <td>۱۰۶</td>
-                                <td>خانواده</td>
-                                <td class="td-name">
-                                    <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input&#45;&#45;name">
-                                </td>
-                                <td class="td-lottery-code">
-                                    <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input&#45;&#45;code">
-                                </td>
-                                <td>
-                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
-                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
-                                </td>
-                            </tr>
-                            <tr data-id="7" data-code="107">
-                                <td scope="row"></td>
-                                <td>کیوان</td>
-                                <td>۱۰۷</td>
-                                <td>خانواده</td>
-                                <td class="td-name">
-                                    <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input&#45;&#45;name">
-                                </td>
-                                <td class="td-lottery-code">
-                                    <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input&#45;&#45;code">
-                                </td>
-                                <td>
-                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
-                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
-                                </td>
-                            </tr>
-                            <tr data-id="8" data-code="108">
-                                <td scope="row"></td>
-                                <td>مونا</td>
-                                <td>۱۰۸</td>
-                                <td>خانواده</td>
-                                <td class="td-name">
-                                    <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input&#45;&#45;name">
-                                </td>
-                                <td class="td-lottery-code">
-                                    <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input&#45;&#45;code">
-                                </td>
-                                <td>
-                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
-                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
-                                </td>
-                            </tr>-->
-
                             <!-- table row template -->
                             <script id="trtemplate" type="text/x-handlebars-template">
-                                <tr class="{{class}}" data-id="{{id}}" data-code="{{inviteNum}}">
-                                    <td scope="row"></td>
+                                <tr class="{{class}}" data-id="{{id}}" data-code="{{inviteNum}}" data-status="{{status}}">
+                                    <td scope="row">{{count}}</td>
                                     <td>{{name}}</td>
                                     <td>{{inviteNumFa}}</td>
                                     <td>{{inviteType}}</td>
@@ -241,9 +96,13 @@
                                         <span style="display: none;"></span>
                                         <input type="number" class="form-control table-input--code">
                                     </td>
-                                    <td>
-                                        <button class="btn btn-success" name="enter">ثبت ورود</button>
-                                        <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
+                                    <td class="td-submit">
+                                        <button class="btn btn-success control-btn" name="enter">ثبت ورود</button>
+                                        <button class="btn btn-warning control-btn" name="edit" style="display: none;">ویرایش</button>
+                                        <span class="secondary-btn control-btn" style="display: none;">
+                                            <button class="btn btn-info" name="update">بروز رسانی</button>
+                                            <button class="btn btn-danger" name="delete">حذف</button>
+                                        </span>
                                     </td>
                                 </tr>
                             </script>
@@ -266,10 +125,6 @@
 
 <!-- Bootstrap.js -->
 <script src="public/assets/libs/bootstrap/bootstrap.min.js"></script>
-
-<!-- handlebars -->
-<script src="public/assets/libs/handlebars/handlebars-v4.0.11.js"></script>
-
 
 
 <!-- Custom js -->
