buttons functionality changed - minor other changes
button update and delete added
spinner added to buttons td
alert has close button
list has max-height

--- a/ehda-list/index.html
+++ b/ehda-list/index.html
@@ -60,7 +60,11 @@
                                 </span>
                             </div>
                         </form>
-                        <div class="alert alert-danger search-alert">
+                        <!--<div class="alert alert-danger search-alert">
+                        </div>-->
+                        <div class="alert alert-danger fade in alert-dismissable search-alert">
+                            <a href="#" class="close" >×</a>
+                            <span></span>
                         </div>
                     </div>
             </div>
@@ -103,6 +107,7 @@
                                             <button class="btn btn-info" name="update">بروز رسانی</button>
                                             <button class="btn btn-danger" name="delete">حذف</button>
                                         </span>
+                                        <i class="fa fa-refresh fa-spin" aria-hidden="true" style="display: none;"></i>
                                     </td>
                                 </tr>
                             </script>
