lottery page created
related files trasfered to this project
required manipulation done

--- a/ehda-list/index.html
+++ b/ehda-list/index.html
@@ -17,8 +17,9 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- Font Awesome -->
+    <!-- Font -->
     <link rel="stylesheet" href="public/assets/libs/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="public/assets/css/fontiran.css">
 
     <!-- Custom Style -->
     <link rel="stylesheet" href="public/assets/css/screen.min.css">
