login page created
login page for operators created

--- a/ehda-list/index.html
+++ b/ehda-list/index.html
@@ -37,7 +37,7 @@
                     <img src="public/assets/images/Custom-logo-white.png" alt="logo" class="b-header-logo-img">
                 </div>
                 <div class="b-header-btn-group">
-                    <a href="/" class="btn btn-danger">
+                    <a href="login.html" class="btn btn-danger">
                         <i class="fa fa-power-off" aria-hidden="true"></i>
                         خروج
                     </a>
